--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>D3 Page Template</title>
-  <script type="text/javascript" src="d3/d3.v3.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/global.css">
+  <script type="text/javascript" src="js/d3.js"></script>
 </head>
 <body>
-  <script type="text/javascript">
-  // Your beautiful D3 code will go here
-  </script>
-  <p>Hello World!</p>
+<a href="week2.html"><h1>Week 2</h1></a>
+<a href="week3.html"><h1>Week 3</h1></a>
 </body>
 </html>
+
