Working template with d3 example in part 1

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<!-- Answers structure -->
 			<section id="one" class="wrapper style2">
 				<div class="inner">
-						<div id="part1¨_a" class="content">
+						<div id="part1_a" class="content">
 							<header class="align-center">
 							  <h2>Part 1</h2>
 								<p>DAOST Chapter 2 Questions</p>
