Part1 written from notes into real answers.

--- a/index.html
+++ b/index.html
@@ -124,39 +124,32 @@ When at the end of the function the distribution should be 1 on the y-axis. It n
 
 <blockquote>What is a Quantile plot? What is it good for.</blockquote>
 <p>
-NOTES:
-Like an CDF but with switched x and y axis. Benificial in questions regarding percentage questions.
-Good: Likelyhood of response time of 1000 ms and above?
+The Quantile plot is like a CDF, but with switched x and y axes. Which is beneficial when posing questions in a slightly different manner, such as "What is the likelihood of response time of 1000 ms and above?"
 </p>
 
 <blockquote>How is a probablity plot defined? What is it useful for? Have you ever seen one before?</blockquote>
 <p>
-NOTES:
-It defined by multples of standard deviation in lower x-axis. Putting the lower x values into a fitting equation the y values are optained.
-The upper x-axis shows a CDF. It's easy to see outliers and to give a quick answer on how predicable the data is. 
-Yes/No. 
+A probability plot is definied by multiples of the standard deviation as the x-axis. Putting the x values into a fitting equation, the y values are obtained.
+The upper x-axis shows a CDF. It's easy to see outliers and to give a quick answer on how predictable the data is.
 </p>
 
 <blockquote>One of the reasons I like DAOST is that Janert is so suspicious of mean, median, and related summary statistics. Explain why one has to be careful when using those - and why visualization of the full data is always better.</blockquote>
 <p>
-NOTES:
-DAOST gives a good explanation of how different the data can look by visualizing it differently.
+As seen in DAOST, different datasets can result in the exact same summary statistics despite wildly different data. It can lead to trivialization of the data and false conclusions. You could perharps think two different datasets are simillar because of similar summary statistics, despite one being tightly distributed around the mean, whereas the other has a number of wild outliers, and thus a very different distribution, but some semblance of symmetry. 
 </p>
 
 <blockquote>I love box plots. When are box plots most useful?</blockquote>
 
 <p>
-NOTES:
-Usefull to give a quick overview of the data. 5 factor summary with lower extreme, lower quantile, median, upper quantile and upper extreme.
-Usefull for comparing data set and to show whether a data set is skewed and to spot outliers. The larger the amount of observations, the more usefull.  
+Box plots are useful at presenting a quick overview of the data, as it quickly relays a five factor summary with lower extreme, lower quantile, median, upper quantile and upper extreme.
+They can be useful for comparing datasets and to show whether a dataset is skewed or has an abundance of outliers. The larger the amount of observations, the more useful.
 </p>
 
 <blockquote>The book doesn't mention violin plots. Are those better or worse than box plots? Why?</blockquote>
 
 <p>
-NOTES:
-Violin plots can show more than box plot. Extented with a rotated kernel density plot. Better to show peaks. 
-Not as populare meaning that they are harder to interpret if you don't know them. 
+Violin plots can show more than the boxplot. It carries the same information, as well as being extented with a rotated kernel density plot, which more fully shows peaks at various points in the dataset. 
+However, they are not as popular. This makes them harder to interpret if you don't know them. 
 </p>
 
 
