--- a/index.html
+++ b/index.html
@@ -167,24 +167,55 @@ However, they are not as popular. This makes them harder to interpret if you don
 
                 <div id="part2">
 <blockquote>Looking at Fig 3-1, Janert writes "the data itself shows clearly that the amount of random noise in the data is small". What do you think his argument is?</blockquote>
-
+<p>
+The data fits far too nicely on lines to have more than a diminutive noise presence. Usually data will have lines superimposed to promise the viewer that with enough measurements, this line represents truth. Superimposing a line is hardly necessary with this figure as it fits so neatly.
+</p>
 <blockquote>Can you think of a real-world example of a multivariate relationship like the one in Fig 3-3 (lower right panel)?</blockquote>
+<p>
+Kan ikke lige finde på noget lige nu
+</p>
 
-<blockquote>What are the two methods Janert metions for smoothing noisy data? Can you think of other ones?</blockquote>
+<blockquote>What are the two methods Janert mentions for smoothing noisy data? Can you think of other ones?</blockquote>
+<p>
+Janert mentions weighted splines and locally weighted regression.
+	
+Another way of smoothing could be different permutations of k-nearest neighbors.
+</p>
 
 <blockquote>What are residuals? Why is it a good idea to plot the residuals of your fit?</blockquote>
+<p>
+Residuals are the results of subtracting the original data with the smoothed result. It is a good idea to plot the residuals as it becomes easier to check that they are symmetrically distributed around zero, that there aren't any trends in them. Any faults found in the residuals suggest a fault in the smoothing or fitting of the data.
+</p>
 
 <blockquote>Explain in your own words the point of the smooth tube in figure 3-7.</blockquote>
+<p>
+The smooth tube is made of two lines which each represent the smoothed average of the data either above or below the solid middle line, representing the smoothed average of the entire dataset. The further these two are from the solid middle line the more varied is the data, or perhaps easily susceptible to noise.
+</p>
 
 <blockquote>What kind of relationships will a semi-log plot help you discover?</blockquote>
+<p>
+The relationships showcased in a semi-log plot are especially the relative kind, such as stock prices over a length of time or the price of gasoline. As humans experience things relatively, plotting the percentage relationship we usually care about. We don't know whether to care if the price of gas goes up 1$, but if it goes up 50% that is a tangible change.
+</p>
 
 <blockquote>What kind of functions will loglog plots help you see?</blockquote>
+<p>
+
+</p>
 
 <blockquote>What the h#ll is banking and what element from our visual system does it use to help us see patterns? What are potential problems with banking?</blockquote>
+<p>
+
+</p>
 
 <blockquote>I think figure 3-14 makes an important point about linear fits that is rarely made. What is it?</blockquote>
+<p>
+
+</p>
 
 <blockquote>Summarize the discussion of Graphical Analysis and Presentation Graphics on pp. 68-69 in your own words.</blockquote>
+<p>
+
+</p>
                 </div>
             
             </div>
