--- a/index.html
+++ b/index.html
@@ -199,22 +199,25 @@ The relationships showcased in a semi-log plot are especially the relative kind,
 
 <blockquote>What kind of functions will loglog plots help you see?</blockquote>
 <p>
-
+Loglog plots helps visualize data that spans orders of magnitude and reveal power-law relationships. 
 </p>
 
 <blockquote>What the h#ll is banking and what element from our visual system does it use to help us see patterns? What are potential problems with banking?</blockquote>
 <p>
-
+Banking is changing the aspect ratio of the plot. This makes use of humans more easily detecting changes when the line is making a 45 degree angle. Thus the plots relation between the x and y axis are changed to make it more easily readable.
 </p>
 
 <blockquote>I think figure 3-14 makes an important point about linear fits that is rarely made. What is it?</blockquote>
 <p>
-
+The main point of figure 3-14 is that you get a different result from regressing on y than from regressing on x, and that a linear regression isn't the best it, but the best predictor.
 </p>
 
 <blockquote>Summarize the discussion of Graphical Analysis and Presentation Graphics on pp. 68-69 in your own words.</blockquote>
 <p>
-
+The discussion has two main parts. The first describes the difference between graphical analysis and presentation graphics.
+The difference between the two is that graphical analysis is exploratory, and pertains to finding answers and examining the data. 
+In a way, it's exploring WHAT to present, and thus should not be concerned by HOW it is presented.
+The other part mainly pertains to how to create good presentation graphics. The main conclusion is that a plot should explain it self without you having to.
 </p>
                 </div>
             
