--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@ However, they are not as popular. This makes them harder to interpret if you don
                 <div id="part2">
 <blockquote>Looking at Fig 3-1, Janert writes "the data itself shows clearly that the amount of random noise in the data is small". What do you think his argument is?</blockquote>
 <p>
-The data fits far too nicely on lines to have more than a diminutive noise presence. Usually data will have lines superimposed to promise the viewer that with enough measurements, this line represents truth. Superimposing a line is hardly necessary with this figure as it fits so neatly.
+The data fits far too nicely on lines to have more than a diminutive noise presence. Usually data will have lines superimposed to promise the viewer that with enough measurements, this line represents truth. Superimposing a line is hardly necessary with this figure as it fits so neatly. In comparison, fig 3-2 is completely chaotic, and is thus likely to be heavily affected by random noise.
 </p>
 <blockquote>Can you think of a real-world example of a multivariate relationship like the one in Fig 3-3 (lower right panel)?</blockquote>
 <p>
-Kan ikke lige finde på noget lige nu
+Possibly medical treatment. The x axis could be time, y axis could be some measurement of health, like number of a specific type of cell. The data could represent how the test patients health deteriorates because of their disease, but when administrating some medicine it helps certain segments of people in the trial, but others are unaffected (e.g. works on women, not on men).
 </p>
 
 <blockquote>What are the two methods Janert mentions for smoothing noisy data? Can you think of other ones?</blockquote>
@@ -199,12 +199,12 @@ The relationships showcased in a semi-log plot are especially the relative kind,
 
 <blockquote>What kind of functions will loglog plots help you see?</blockquote>
 <p>
-Loglog plots helps visualize data that spans orders of magnitude and reveal power-law relationships. 
+Loglog plots helps visualize data that spans orders of magnitude and reveal power-law relationships such as y = Cxk or y = C/xk . 
 </p>
 
 <blockquote>What the h#ll is banking and what element from our visual system does it use to help us see patterns? What are potential problems with banking?</blockquote>
 <p>
-Banking is changing the aspect ratio of the plot. This makes use of humans more easily detecting changes when the line is making a 45 degree angle. Thus the plots relation between the x and y axis are changed to make it more easily readable.
+Banking is when you change the aspect ratio of the plot, so the rising and falling flanks of a curve will be roughly 45 degrees. It helps show trends, so we better can see how much the data is falling/rising relative to the rest of the data.
 </p>
 
 <blockquote>I think figure 3-14 makes an important point about linear fits that is rarely made. What is it?</blockquote>
