--- a/index.html
+++ b/index.html
@@ -97,9 +97,6 @@
 In the presidents example, from the DAOST book, the presidents usually spend a term or two in office, i.e. 4 or 8 years.
 By adding random noise to the univariate data, the y-axis is utilized as well.
 </p>
-<p class="align-center">
-  <img src="images/jitter.png" />
-</p>
 
 <blockquote>Explain in your own words the point of figure 2-3. (I'm going to skip saying "in your own words" going forward, but I hope you get the point; I expect all answers to be in your own words).</blockquote>
 <p>
@@ -110,9 +107,6 @@ Different anchor points have been chosen in the two plots on the same data and t
 A first guess of the correct bin size can be chosen from <em>Scott's rule</em>.
 Histograms exceed at representing varying data, e.g. if one would make an experiment where it's expected to have data in a certain interval. 
 If it's desired to view two similar histogram giving some small varying data the bin size and anchor point gives the benefit of aligning the data.
-</p>
-<p class="align-center">
-  <img src="images/scott.png">
 </p>
 
 <p>
@@ -126,10 +120,6 @@ This can be good if a lot of outliers are present, or if the data collected is n
 One problem of KDE's are that data can no longer be extrapolated directly from the plot since the data has been modified. 
 In the presidents example the KDE ruins the actual data totally. 
 </p>
-<p class="align-center">
-  <img src="images/kde.png" />
-</p>
-
 
 <blockquote>I've discussed some strengths of the CDF - there are also weaknesses. Janert writes "[CDFs] have less intuitive appeal than histograms of KDEs". What does he mean by that?</blockquote>
 
@@ -279,6 +269,8 @@ The other part mainly pertains to how to create good presentation graphics. The 
     </div>
   </div>
 </div>
+
+<p></p>
 <p>If you miss the month of September, you might be behind the fruit curve, but there are plenty more months of vegetables left.  The chart shows that fresh vegetables are available 9 out of 12 months, but fruit is only available 5 out of 12. Now if only we could quantify how delicious the produce is… 
 </p>
 
@@ -316,6 +308,8 @@ The other part mainly pertains to how to create good presentation graphics. The 
     </div>
   </div>
 </div>
+
+<p>Data from: <a href"https://en.wikipedia.org/wiki/List_of_winners_of_the_Boston_Marathon" target="_blank">https://en.wikipedia.org/wiki/List_of_winners_of_the_Boston_Marathon</a></p>
 
             </div>
 					</div>
