--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Assignment 1</title>
+    <title>Assignment 2</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -136,6 +136,7 @@
 <div class="actions align-center uniform">
 
 
+<div class="align-center" id="part2_bar"></div>
 <div class="align-center" id="part2_linechart"></div>
 <div class="align-center" id="part2_map"></div>
 
