--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="https://d3js.org/d3.v4.js"></script>
     <!-- <script src="js/d3.v4.min.js"></script> -->
+    <script src="js/lodash.min.js"></script>
 
     <style type="text/css">
         
