Added excel file to view, changes some js naming

--- a/SocialDataProject/index.html
+++ b/SocialDataProject/index.html
@@ -192,7 +192,7 @@
       <script src="assets/js/main.js"></script>
 
     <!-- Answers d3 section -->
-    <script type="text/javascript" src="js/ass2_part2.js"> 
+    <script type="text/javascript" src="js/projectB_d3.js"> 
     </script>
   </body>
 </html>
